<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/symbol_icon"
        android:background="@color/sky_blue"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:id="@+id/nearby_bottom_layout_icon"
            android:orientation="vertical"
            android:layout_width="0dp"
            android:gravity="center"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:onClick="onIconClick">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="6">
                <ImageView
                    android:id="@+id/nearby_map_icon"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_location_on_white_24dp"
                    />
            </LinearLayout>
            <LinearLayout
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="4">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="@string/nearby"
                    android:textSize="10dp"/>
            </LinearLayout>
       </LinearLayout>
        <LinearLayout
            android:id="@+id/friends_bottom_layout_icon"
            android:orientation="vertical"
            android:layout_width="0dp"
            android:gravity="center"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:onClick="onIconClick">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="6">
                <ImageView
                    android:id="@+id/friends_map_icon"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_people_outline_white_24dp"/>
            </LinearLayout>
            <LinearLayout
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="4">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/friends"
                    android:textColor="@color/white"
                    android:textSize="10dp"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/discover_bottom_layout_icon"
            android:orientation="vertical"
            android:layout_width="0dp"
            android:gravity="center"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:onClick="onIconClick">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="6">
                <ImageView
                    android:id="@+id/discover_map_icon"
                    android:layout_margin="5dp"
                    android:tint="@color/white"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/discover"/>
            </LinearLayout>
            <LinearLayout
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="4">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="@string/discover"
                    android:textSize="10dp"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/messages_bottom_layout_icon"
            android:orientation="vertical"
            android:layout_width="0dp"
            android:gravity="center"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:onClick="onIconClick">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="6">
                <ImageView
                    android:layout_margin="5dp"
                    android:tint="@color/white"
                    android:id="@+id/messages_map_icon"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/message"/>
            </LinearLayout>
            <LinearLayout
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="4">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/messages"
                    android:textColor="@color/white"
                    android:textSize="10dp"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/profile_bottom_layout_icon"
            android:orientation="vertical"
            android:layout_width="0dp"
            android:gravity="center"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:onClick="onIconClick">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="6">
                <ImageView
                    android:id="@+id/profile_map_icon"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_perm_identity_white_24dp"/>
            </LinearLayout>
            <LinearLayout
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="4">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="@string/profile"
                    android:textSize="10dp"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>